# miamente

./: .eslintignore  .firebaserc  .gitignore  BRANCHING_WORKFLOW.md  CHECKLIST.md  DEPLOYMENT_READY.md  DEVELOPMENT.md  MIGRATION_GUIDE.md  README.md  SECURITY.md  SETUP_INSTRUCTIONS.md  dev-start.sh  docker-compose.yml  eslint.config.mjs  firebase.dev.json  firebase.json  firestore.dev.rules  firestore.rules  lighthouserc.json  package-lock.json  package.json  pgadmin-servers.json  playwright.config.ts  playwright.fast.config.ts  start-migration.sh  storage.rules  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.lighthouseci/: assertion-results.json  lhr-1757043638707.html  lhr-1757043638707.json  lhr-1757043685685.html  lhr-1757043685685.json  lhr-1757043702236.html  lhr-1757043702236.json  lhr-1757043719024.html  lhr-1757043719024.json  lhr-1757043736208.html  lhr-1757043736208.json
backend/: .env.example  .flake8  .gitignore  .pylintrc  BRANCH_PROFESSIONAL_PROFILE_UPDATE.md  DATABASE_USERS.md  Dockerfile  README.md  TEST_PROFESSIONAL_INFO.md  alembic.ini  check_user_password.py  create_test_professional.py  debug_login.py  debug_password.py  env.example  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup_database.py  sonar-project.properties  test_api.py  test_auth_direct.py  test_config.py  test_login.py  test_profile_access.py  test_token_creation.py  test_user_login.py  update_user_role.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_migration.py  0002_remove_education_field.py  0d123c99e3cb_refactor_is_default_specialty_to_boolean.py  0dfbc50efd80_populate_initial_mental_health_data.py  0f9103bfe8bf_initial_schema.py  1bba2b9d27de_rename_therapy_approaches_to_therapy_.py  2aa134a19798_fix_professional_specialties_is_active_.py  37079caf8c05_remove_certifications_field.py  41e69585a762_correct_date_attribute_from_tables.py  6a6ff3d91c90_add_new_mental_health_models.py  73768d084541_add_is_default_column_and_remove_old.py  766d68015e08_add_updated_at_column_to_professional_.py  79edc6788fbd_add_specialties_table_and_professional_.py  8748af3a6548_add_specialty_ids_to_professional.py  93b9371ec3e1_add_professional_specialties_table.py  9eb63f5a9477_create_all_tables_matching_current_.py  b99e5b6a4145_restore_certifications_field.py  c46f93734469_add_phone_separate_fields.py  cc73aa9773bd_remove_old_specialty_fields.py
backend/alembic/versions/backup/: 79edc6788fbd_add_specialties_table_and_professional_.py  8896a8b86d20_initial_migration_create_all_base_tables.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: appointments.py  auth.py  availability.py  files.py  modalities.py  payments.py  professional_modalities.py  professional_specialties.py  professional_specialties_new.py  professional_therapeutic_approaches.py  professionals.py  specialties.py  specialties_new.py  therapeutic_approaches.py  users.py
backend/app/core/: config.py  constants.py  database.py  security.py
backend/app/models/: __init__.py  appointment.py  availability.py  mixins.py  modality.py  payment.py  professional.py  professional_modality.py  professional_specialty.py  professional_specialty_new.py  professional_therapeutic_approach.py  specialty.py  specialty_new.py  therapeutic_approach.py  user.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  availability.py  modality.py  payment.py  professional.py  professional_modality.py  professional_specialty.py  professional_specialty_new.py  professional_therapeutic_approach.py  specialty.py  specialty_new.py  therapeutic_approach.py  user.py
backend/app/services/: __init__.py  appointment_service.py  auth_service.py  availability_service.py  email_service.py  modality_service.py  payment_service.py  professional_modality_service.py  professional_service.py  professional_specialty_new_service.py  professional_specialty_service.py  professional_therapeutic_approach_service.py  seed_demo_data.py  specialty_new_service.py  specialty_service.py  therapeutic_approach_service.py  user_service.py
backend/app/utils/: __init__.py  auth.py  parsers.py
backend/tests/: README.md  conftest.py  test_professional_experience.py  test_professional_profile.py
backend/tests/fixtures/: test_appointment.py
backend/tests/fixtures/services/: __init__.py  auth_service.py  user_service.py
backend/tests/integration/: README.md  conftest.py  test_appointment_endpoints.py  test_auth_endpoints.py  test_payment_endpoints.py  test_professional_endpoints.py  test_user_endpoints.py
backend/tests/integration/auth/: test_auth_endpoints.py
backend/tests/integration/modalities/: test_modalities_endpoints.py
backend/tests/integration/models/: test_models.py
backend/tests/integration/professional_modalities/: test_professional_modalities_endpoints.py
backend/tests/integration/professional_specialties/: test_professional_specialties_endpoints.py
backend/tests/integration/professional_therapeutic_approaches/: test_professional_therapeutic_approaches_endpoints.py
backend/tests/integration/specialties/: test_specialties_endpoints.py
backend/tests/integration/therapeutic_approaches/: test_therapeutic_approaches_endpoints.py
backend/tests/integration/user/: test_user_endpoints.py
backend/tests/integration/users/: test_users_endpoints.py
backend/tests/unit/: test_appointment_service.py  test_auth_service.py  test_models.py  test_professional_service.py  test_services.py  test_user_service.py
backend/tests/unit/models/: test_models.py
backend/tests/unit/services/: test_auth_service_comprehensive_unit.py  test_auth_service_unit.py  test_config.py  test_modality_service_unit.py  test_professional_modality_service_unit.py  test_professional_service_unit.py  test_professional_specialty_service_unit.py  test_professional_therapeutic_approach_service_unit.py  test_simple_unit.py  test_specialty_service_unit.py  test_therapeutic_approach_service_unit.py  test_user_service_comprehensive_unit.py  test_user_service_unit.py
backend/uploads/: README.md
(+341 files in other folders)
